<resources>
    <string name="app_name">PlacApp</string>
    <string name="label_title">Clubes</string>
    <string name="label_home">Home</string>
    <string name="label_away">Away</string>
    <string name="label_start_game">Start</string>
    <string name="hint_home">Ex: Sao Paulo</string>
    <string name="hint_away">Ex: Palmeiras</string>
    <string name="label_go">GOAL</string>
</resources>
