<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
              android:padding="16dp"
    tools:context=".MainActivity">

    <TextView style="@style/title"
              android:text="@string/label_title"/>

    <TextView style="@style/label"
              android:hint="@string/hint_home"
              android:text="@string/label_home"/>

    <EditText style="@style/input" android:id="@+id/inputHome"/>

    <TextView style="@style/label"
              android:hint="@string/hint_away"
              android:text="@string/label_away"/>

    <EditText style="@style/input" android:id="@+id/inputAway"/>

    <Button style="@style/button" android:text="@string/label_start_game" android:id="@+id/btStart">
    </Button>

</LinearLayout>